// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenario-action-patterns-form Renders \`scenario-action-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  both-counters=""
  entity-attributes="[object Object]"
  form="[object Object]"
  name="customName"
  some-required=""
  value="[object Object]"
  with-alarm=""
  with-entity=""
/>
`;

exports[`scenario-action-patterns-form Renders \`scenario-action-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  both-counters=""
  entity-attributes="[object Object]"
  name="patterns"
  some-required=""
  value="[object Object]"
  with-alarm=""
  with-entity=""
/>
`;
